[gd_scene load_steps=3 format=3 uid="uid://dttbpp65bqaeb"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_58e7o"]
[ext_resource type="Theme" uid="uid://bep32cc2ji5ul" path="res://themes/large_button.tres" id="2_i5r7e"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58e7o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.219608, 0.219608, 0.219608, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 432
theme_override_constants/margin_top = 225
theme_override_constants/margin_right = 432
theme_override_constants/margin_bottom = 231

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_i5r7e")
text = "Resume"

[node name="LevelSelect" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_i5r7e")
text = "Level Select"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_i5r7e")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
